--- a/react/helloworld.html
+++ b/react/helloworld.html
@@ -4,15 +4,10 @@
     <meta charset="UTF-8">
     <title>Hello React!</title>
     <script src="react-0.13.3/build/react.js"></script>
-    <script src="libs/browser.min.js"></script>
+    <!-- No need for Babel! -->
 </head>
 <body>
     <div id="example"></div>
-    <script type="text/babel">
-        React.render(
-            <h1>Hello, world!</h1>,
-            document.getElementById('example')
-         );
-    </script>
+    <script src="build/helloworld.js"></script>
 </body>
 </html>
