--- a/react/01 - Simple Hello World/helloworld.html
+++ b/react/01 - Simple Hello World/helloworld.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Hello React!</title>
-    <script src="react-0.13.3/build/react.js"></script>
+    <script src="build/react.js"></script>
     <!-- No need for Babel! -->
 </head>
 <body>
