--- a/react/02_Tutorial/public/index.html
+++ b/react/02_Tutorial/public/index.html
@@ -12,6 +12,6 @@
   </head>
   <body>
     <div id="content"></div>
-    <script type="text/babel" src="scripts/tutorial1.js"></script>
+    <script type="text/babel" src="scripts/example.js"></script>
   </body>
 </html>
